force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/agf__ADM_Investigation_Exception__c.object-meta.xml
<CustomObject>
    <label>Exception Request</label>
    <nameField>
        <displayFormat>IE-{00000}</displayFormat>
        <label>Investigation Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>