force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/fields/agf__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>agf__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The person making the decision - varies by status</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigation_Exceptions1</relationshipName>
    <type>Lookup</type>
</CustomField>