force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/fields/agf__Decision_Explanation__c.field-meta.xml
<CustomField>
    <fullName>agf__Decision_Explanation__c</fullName>
    <description>Should be filled out by the Assigned To</description>
    <inlineHelpText>Should be filled out by the Assigned To</inlineHelpText>
    <label>Decision Explanation</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>