force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/fields/agf__Investigation__c.field-meta.xml
<CustomField>
    <fullName>agf__Investigation__c</fullName>
    <label>Investigation</label>
    <referenceTo>agf__ADM_Work__c</referenceTo>
    <relationshipName>Investigation_Exceptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>