force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/fields/agf__Reason_for_Request__c.field-meta.xml
<CustomField>
    <fullName>agf__Reason_for_Request__c</fullName>
    <description>Should be filled out by the Requestor</description>
    <inlineHelpText>Should be filled out by the Requestor</inlineHelpText>
    <label>Reason for Request</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>