force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/fields/agf__Requestor__c.field-meta.xml
<CustomField>
    <fullName>agf__Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person who created the exception. Value entered automatically upon saving the record.</description>
    <inlineHelpText>Person who created the exception. Value entered automatically upon saving the record.</inlineHelpText>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Investigation_Exceptions</relationshipName>
    <type>Lookup</type>
</CustomField>