force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/fields/agf__Status__c.field-meta.xml
<CustomField>
    <fullName>agf__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under Review</fullName>
                <default>true</default>
                <label>Under Review</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Parent Investigation Resolved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>