force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/validationRules/agf__Dec_Explanation_Empty_Status_Approved.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Dec_Explanation_Empty_Status_Approved</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(agf__Status__c, &quot;Approved&quot;), 
agf__Decision_Explanation__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>agf__Decision_Explanation__c</errorDisplayField>
    <errorMessage>Please provide a decision explanation when setting the status to &apos;Approved&apos;.</errorMessage>
</ValidationRule>