force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Investigation_Exception__c/validationRules/agf__Dec_Explanation_Empty_With_Status_Reject.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Dec_Explanation_Empty_With_Status_Reject</fullName>
    <active>true</active>
    <errorConditionFormula>AND(CASE( agf__Status__c,
&quot;Rejected&quot;, 1,
0) = 1, agf__Decision_Explanation__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>agf__Decision_Explanation__c</errorDisplayField>
    <errorMessage>Please provide a decision explanation when setting the status to &apos;Rejected&apos;.</errorMessage>
</ValidationRule>